--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 :root {
     --primaryColor: #fd951f;
-    --secondary-color: #1fd4fd;
+    --secondary-color: #1f83fd;
 }
 
 * {
@@ -18,6 +18,8 @@ html, body {
 }
 body {
     background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
 }
 .container{
     width: 90%;
@@ -42,6 +44,19 @@ body {
 }
 .button:hover {
     background-color: #d7780b;
+}
+
+.button.delete {
+    background-color: lightgray;
+}
+.button.edit {
+    background-color: var(--secondary-color);
+}
+.button.delete:hover {
+    background-color: rgb(248, 89, 89);
+}
+.button.edit:hover {
+    background-color: #065ac1;
 }
 
 /* ======  HEADER ====== */
@@ -113,6 +128,7 @@ footer {
     width: 100%;
     padding: 32px 0;
     text-align: center;
+    margin-top: auto ;
 }
 
 /* ===== PRODUCTS FORM ======= */
@@ -135,7 +151,9 @@ section.form .header h3 {
     color: var(--primaryColor);
     margin-bottom: 16px;
 }
-
+form .fields {
+    margin-bottom: 32px;
+}
 form .item {
     margin-bottom: 16px;
 }
@@ -174,6 +192,213 @@ form .item select {
 form .item textarea {
     min-height: 150px;
 }
+form .item span {
+    padding: 8px 16px;
+    background-color: var(--primaryColor);
+    border-radius: 16px;
+    color: white;
+    margin-right: 4px;
+    margin-top: 8px;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 form .fields {
     margin-bottom: 32px;
 }
+
+/*  PHOTOS UPLOAD */
+form .item #photos-upload {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    width: 200px;
+}
+form .item #photos-upload p {
+    padding: 8px 16px;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px -6px #333;
+    background-color: var(--secondary-color);
+    color: white;
+    width: 100%;
+    cursor: pointer;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+form .item #photosInput {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+form .item #photos-preview {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:  8px;
+    width: 100%;
+    margin: 8px 0;
+}
+form .item #photos-preview img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+#photos-preview .photo {
+    position: relative;
+}
+#photos-preview .photo i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    color: red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
+    cursor: pointer;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+}
+#photos-preview .photo:hover i{
+    opacity: 1;
+}
+
+/* ==== PRODUCT SHOW ==== */
+.product-single {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 24px;
+    padding: 32px 24px;
+    margin: 32px auto;
+    box-shadow: 0px 0px 8px -4px rgba(63, 63, 63, 0.7);
+    border: 1px solid #efefef;
+    border-radius: 4px;
+}
+.product-single .gallery{
+    width:100%;
+}
+.product-single .highlight > img{
+    width: 100%;
+    height: 280px;
+    object-fit: none;
+    object-position: 50% 50%;
+    border: 1px solid #efefef;
+    cursor: zoom-in;
+}
+.product-single .gallery-preview{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 4px;
+
+}
+.product-single .gallery-preview img{
+    height: 100px;
+    width: 100%;
+    object-fit: cover;
+    opacity: 0.6;
+    cursor: pointer;
+    transition: 200ms ease-in-out;
+}
+.product-single .gallery-preview img.active,
+.product-single .gallery-preview img:hover{
+    opacity: 1;
+}
+.product-single .info {
+    display: grid;
+    grid-template-rows: auto 40px 2fr 1fr;
+}
+.product-single .info h1{
+    font-size: 32px;
+    line-height: 42px;
+    color: #333;
+    text-transform: uppercase;
+}
+.product-single .info .published{
+    color: #888;
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: 0.4px;
+}
+.product-single .info .price-buy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 8px;
+    border-top: 1px solid #eee;
+}
+.product-single .info .price-buy .price {
+    font-size: 24px;
+    color: #333;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+.product-single .info .price-buy .price .old{
+    text-decoration: line-through;
+    color: #999;
+    font-size: 14px;
+    font-weight: normal;
+    margin-left: 8px;
+}
+.product-single .info .price-buy .buy button {
+    background-color: var(--secondary-color);
+    font-size: 14px;
+    letter-spacing: .4px;
+}
+.product-single .info .price-buy .buy .unavailable{
+    visibility: visible;
+}
+
+/* LIGHTBOX PRODUCT GALLERY */
+.product-single .highlight .lightbox-target {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    background: rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+    z-index: 100;
+    left: 0;
+    top: -100%;
+    opacity: 0;
+    transition: 400ms ease-in-out;
+}
+
+.product-single .highlight .lightbox-target img{
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    box-shadow: 0 0 8px -8px rgba(0, 0, 0, 0.3);
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
+}
+.product-single .highlight a.lightbox-close {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    position: absolute;
+    top: -80px;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 400ms;
+
+}
+
