--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -20,6 +20,27 @@
 </div>
 
 <div class="item">
+    <div>Fotos</div>
+    <div>
+        <div id="photos-upload">
+            <input type="file" name="photos" id="photosInput" multiple accept="image/*" onchange="PhotosUpload.handleFileInput(event)">
+            <p>Selecione até 6 fotos</p>
+        </div>
+        <div id="photos-preview">
+        {% if files %}
+            {% for image in files %}
+                <div class="photo" id="{{image.id}}">
+                    <img src="{{image.src}}" alt="{{image.name}}">
+                    <i class="material-icons" onclick="PhotosUpload.removeOldPhoto(event)">close </i>
+                </div>
+            {% endfor %}
+            <input type="hidden" name="removed_files">
+        {% endif %}
+        </div>
+    </div>
+</div>
+
+<div class="item">
     <div>Valor</div>
     <div><input 
         type="text" 
@@ -42,8 +63,8 @@
     <div class="item">
         <div>Disponível</div>
         <div>
-            <span><input type="radio" name="status" value="1" checked {%if product.status == "1" %}checked{%endif%}>Sim</span>
-            <span><input type="radio" name="status" value="0" {%if product.status == "0" %}checked{%endif%}>Não</span>
+            <span><input type="radio" name="status" value="1" checked {%if product.status == "1" %}checked{%endif%}> Sim</span>
+            <span><input type="radio" name="status" value="0" {%if product.status == "0" %}checked{%endif%}> Não</span>
         </div>
     </div>
 {% endif %}
