Listagem e search incluidos no projeto

--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -14,7 +14,7 @@
                 name="filter" 
                 placeholder="Buscar por produto"
                 {% if search.term %}
-                    value="search.term"
+                    value={{search.term}}
                 {% endif %}>
          </form>
          <nav class="primary">
