--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -2,7 +2,7 @@
     <div>Categoria</div>
     <div><select name="category_id">
         {% for category in categories %}
-            <option value="{{category.id}}" {%if product.category.id == category.id %} selected {%endif%}>{{category.name}}</option>
+            <option value="{{category.id}}" {%if product.category_id == category.id %} selected {%endif%}>{{category.name}}</option>
         {% endfor %}
     </select></div>
 </div>
