--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@
     list-style-type: none;
     box-sizing: border-box;
     font-family: 'Roboto', 'sans-serif';
+    outline: none;
 }
 
 html, body {
@@ -481,6 +482,15 @@ form .item #photos-preview img {
 .form input[name="passwordRepeat"],
 .form input[name="cpf_cnpj"],
 .form input[name="cep"] {
+    max-width: 60%;
+}
+
+/* Validate errors */
+.input .error {
+    background-color: #e74c3c;
+    padding: 4px;
+    border-radius: 4px;
+    color: white;
     max-width: 60%;
 }
 
