--- a/src/app/views/user/fields.njk
+++ b/src/app/views/user/fields.njk
@@ -5,7 +5,8 @@
         type="text" 
         name="name" 
         value="{{user.name}}" 
-        placeholder="Digite seu nome completo" 
+        placeholder="Digite seu nome completo"
+        required 
         >
     </div>
 </div>
@@ -16,6 +17,7 @@
         name="email" 
         value="{{user.email}}" 
         placeholder="Digite seu email" 
+        onblur="Validate.apply(this, 'isEmail')"
         >
     </div>
 </div>
@@ -41,23 +43,25 @@
     {% endif %}
 <div class="item">
     <div>CPF ou CNPJ</div>
-    <div><input 
+    <div class="input"><input 
         type="text" 
         name="cpf_cnpj"  
         placeholder="Digite seu documento" 
         value="{{user.cpf_cnpj}}"
         onkeydown="Mask.apply(this, 'cpfCnpj')"
+        onblur="Validate.apply(this, 'isCpfCnpj')"
         >
     </div>
 </div>
 <div class="item">
     <div>CEP</div>
-    <div><input 
+    <div class="input"><input 
         type="text" 
         name="cep"  
         placeholder="99999-999" 
         value="{{user.cep}}"
         onkeydown="Mask.apply(this, 'cep')"
+        onblur="Validate.apply(this, 'isCep')"
         >
     </div>
 </div>
