--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -4,3 +4,5 @@
 
 <link rel="stylesheet" href="/styles/index.css">
 <link rel="stylesheet" href="/styles/messages.css">
+<link rel="stylesheet" href="/styles/menu-accounts.css">
+<link rel="stylesheet" href="/styles/session.css">
