criado service de Load Product

--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -45,12 +45,12 @@
     <div><input 
         type="text" 
         name="price" 
-        value="{{product.price}}" 
+        value="{{product.formattedPrice}}" 
         placeholder="Preço do produto" 
         onkeydown="Mask.apply(this, 'formatBRL')">
     </div>
-    {% if product.old_price %}
-        <input type="hidden" name="old_price" value="{{product.old_price}}">
+    {% if product.formattedOld_price %}
+        <input type="hidden" name="old_price" value="{{product.formattedOld_price}}">
     {% endif %}
 </div>
 
