--- a/src/app/views/parts/section-products.njk
+++ b/src/app/views/parts/section-products.njk
@@ -9,12 +9,12 @@
                 <div class="product">
                     <div class="image" style="background-image: url('{% if product.img %}{{product.img}}{% else %}https://via.placeholder.com/500x360.png?text=Produto+sem+foto{% endif %}')">
                     </div>
-                        {% if product.old_price != product.price %}
+                        {% if product.formattedOld_price != product.formattedPrice %}
                             <div class="old-price">
-                                {{product.old_price}}
+                                {{product.formattedOld_price}}
                             </div>
                         {% endif %}
-                        <p>{{product.price}}</p>
+                        <p>{{product.formattedPrice}}</p>
                         <h4>{{product.name}}</h4>
                         <a href="/products/{{product.id}}" class="button">Ver produto</a>
                     
