--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -36,7 +36,7 @@
                             <a href="/users">Minha conta</a>
                         </li>
                         <li>
-                            <a href="/buying">Meus pedidos</a>
+                            <a href="/users/ads">Meus anúncios</a>
                         </li>
                         <li>
                             <a href="/selling">Minhas vendas</a>
