--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -3,6 +3,8 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <link rel="stylesheet" href="/styles/index.css">
+<link rel="stylesheet" href="/styles/card.css">
 <link rel="stylesheet" href="/styles/messages.css">
 <link rel="stylesheet" href="/styles/menu-accounts.css">
 <link rel="stylesheet" href="/styles/session.css">
+<link rel="stylesheet" href="/styles/users.css">
