--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/styles/index.css">
 <link rel="stylesheet" href="/styles/card.css">
 <link rel="stylesheet" href="/styles/messages.css">
+<link rel="stylesheet" href="/styles/products.css">
 <link rel="stylesheet" href="/styles/menu-accounts.css">
 <link rel="stylesheet" href="/styles/session.css">
 <link rel="stylesheet" href="/styles/users.css">
