--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -1,34 +1,32 @@
 {% extends 'layout.njk' %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
-<section class="container form">
-    <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
-       
-        <div class="header">
-            <h3>Editar produto</h3>
-        </div>
-        <div class="fields">
-            {% include "products/fields.njk"%}
+
+    {%call card.render('Editar produto', 'edit-product container')%}
+        <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
+            <div class="fields">
+                {% include "products/fields.njk"%}
+                <input type="hidden" name="id" value="{{product.id}}">
+            </div>
+            <button class="button edit" type="submit">Atualizar</button>
+        </form>
+
+        <form id="form-delete" method="POST" action="/products?_method=DELETE">
             <input type="hidden" name="id" value="{{product.id}}">
-        </div>
-        <button class="button edit" type="submit">Atualizar</button>
-    </form>
-
-    <form id="form-delete" method="POST" action="/products?_method=DELETE">
-        <input type="hidden" name="id" value="{{product.id}}">
-        <button class="button delete" type="submit">Deletar</button>
-    </form>
-</section>
-
-<script>
-    const formDelete = document.querySelector("#form-delete")
-    formDelete.addEventListener("submit", event => {
-        const confirmation = confirm("Deseja deletar?")
-        if(!confirmation) {
-            event.preventDefault()
-        }
-    })
-</script>
-    
+            <button class="button delete" type="submit">Deletar</button>
+        </form>
+    {%endcall%}    
+    <script>
+        const formDelete = document.querySelector("#form-delete")
+        formDelete.addEventListener("submit", event => {
+            const confirmation = confirm("Deseja deletar?")
+            if(!confirmation) {
+                event.preventDefault()
+            }
+        })
+    </script>
 
 {% endblock content %}
+
