--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -1,5 +1,68 @@
 {% extends 'layout.njk' %}
 
+{% import "parts/card.njk" as card %}
+
+{% block content %}
+
+    {%call card.render('', 'product-single container')%}
+        <div class="gallery">
+            <div class="highlight">
+                {% if not files[0] %}
+                    <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" alt="">
+                {% else %}
+                    <img src="{{files[0].src}}" alt="{{files[0].name}}" onclick="Lightbox.open(event)">
+                {% endif %}
+                <div class="lightbox-target">
+                    <img src="{{files[0].src}}" alt="{{files[0].name}}">
+                    <a href="#" class="lightbox-close" onclick="Lightbox.close()">
+                        <i class="material-icons">close</i>
+                    </a>
+                </div>{# <--lightbox-target--> #}
+            </div>{# <--highlight--> #}
+            <div class="gallery-preview">
+                {% for file in files %}
+                    <img 
+                        src="{{file.src}}" 
+                        alt="{{file.name}}" 
+                        {%if loop.index0 == 0%} class="active" {%endif%} 
+                        onclick="ImageGallery.setImage(event)">
+                {% endfor %}
+            </div>{# <--gallery-preview--> #}
+        </div>{# <--gallery--> #}
+        <div class="info">
+            <h1>{{product.name}}</h1>
+            <div class="published">
+                Publicado em {{product.published.day}} as {{product.published.hour}}
+            </div>{# <--published--> #}
+            <div class="description">
+                {{product.description}}
+            </div>{# <--description--> #}
+            <div class="price-buy">
+                <div class="price">
+                    {{product.formattedPrice}}
+                    {% if product.formattedPrice != product.formattedOld_price %}
+                        <span class="old">{{product.formattedOld_price}}</span>
+                    {% endif %}
+                 </div>{# <--price--> #}
+                
+                <div class="buy">
+                    {% if product.status == 0  %}
+                        <p class="unavailable">Indisponivel</p>
+                    {% elseif product.quantity == 0 %}
+                        <p class="unavailable">Fora de estoque</p>
+                    {% else %}
+                        <button class="button">COMPRAR</button>
+                    {% endif %}
+                </div>{# <--buy--> #}
+            </div>{# <--price-buy--> #}
+        </div>{# <--info--> #}
+    {%endcall%}    
+
+{% endblock content %}
+
+
+{# {% extends 'layout.njk' %}
+
 {% block content %}
     <section class="product-single container">
 
@@ -60,4 +123,4 @@
 
 
     </section>
-{% endblock content %}
+{% endblock content %} #}
