--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -1,20 +1,16 @@
 {% extends 'layout.njk' %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
-<section class="password container form">
-    <form  method="POST" action="/users/forgot-password" >
-       
-        <div class="header">
-            <h3>Esqueceu a Senha</h3>
-        </div>
-        <div class="fields">
-            {% include "session/forgot-fields.njk"%}
-        </div>
-             
-        <button class="button" type="submit">Recuperar senha</button>
-        
-    </form>
-</section>
-    
+
+    {%call card.render('Esqueceu a senha?', 'password container')%}
+        <form  method="POST" action="/users/forgot-password" >
+            <div class="fields">
+                {% include "session/forgot-fields.njk"%}
+            </div> 
+            <button class="button" type="submit">Recuperar senha</button>
+        </form>
+    {%endcall%}    
 
 {% endblock content %}
