--- a/src/app/views/session/login.njk
+++ b/src/app/views/session/login.njk
@@ -1,29 +1,27 @@
 {% extends 'layout.njk' %}
 
+{% import "parts/card.njk" as card %}
+
 {% block content %}
-<section class="login container form">
-    <form  method="POST" action="/users/login" >
-       
-        <div class="header">
-            <h3>Entrar</h3>
-        </div>
-        <div class="fields">
-            {% include "session/fields.njk"%}
-        </div>
-             
-        <button class="button" type="submit">Entrar</button>
-        <div class="footer">
-            <ul>
-                <li>
-                    <a href="/users/register">Registre-se</a>
-                </li>
-                <li>
-                    <a href="/users/forgot-password">Esqueci a senha</a>
-                </li>
-            </ul>
-        </div>
-    </form>
-</section>
-    
+
+    {%call card.render('Entrar', 'login container')%}
+        <form  method="POST" action="/users/login" >
+            <div class="fields">
+                {% include "session/fields.njk"%}
+            </div>
+                
+            <button class="button" type="submit">Entrar</button>
+            <div class="footer">
+                <ul>
+                    <li>
+                        <a href="/users/register">Registre-se</a>
+                    </li>
+                    <li>
+                        <a href="/users/forgot-password">Esqueci a senha</a>
+                    </li>
+                </ul>
+            </div>
+        </form>
+    {%endcall%}    
 
 {% endblock content %}
