--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -9,3 +9,4 @@
 <link rel="stylesheet" href="/styles/menu-accounts.css">
 <link rel="stylesheet" href="/styles/session.css">
 <link rel="stylesheet" href="/styles/users.css">
+<link rel="stylesheet" href="/styles/orders.css">
