--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -25,13 +25,13 @@
                         Novo Anúncio
                     </a>
                 </li>
-                <li class="accounts">
+                <li class="accounts dropdown-container">
                     <a href="/accounts">
                         <i class="material-icons">account_circle</i>
                         Minha conta
                     </a>
                     {% if session.userId %}
-                        <ul class="submenu">
+                        <ul class="dropdown">
                         <li>
                             <a href="/users">Minha conta</a>
                         </li>
@@ -39,7 +39,10 @@
                             <a href="/users/ads">Meus anúncios</a>
                         </li>
                         <li>
-                            <a href="/selling">Minhas vendas</a>
+                            <a href="/orders">Meus pedidos</a>
+                        </li>
+                        <li>
+                            <a href="/orders/sales">Minhas vendas</a>
                         </li>
                         <li>
                             <form action="/users/logout" method="POST">
@@ -50,6 +53,15 @@
                     {% endif %}
                     
                 </li> <!-- accounts -->
+                <li class="cart">
+                    <a href="/cart">
+                        <i class="material-icons">shopping_cart</i>
+                        {% if (session.cart) and (session.cart.total.quantity>0) %}
+                            <span id="cart-status-info">{{session.cart.total.quantity}}</span>
+                            
+                        {% endif %}
+                    </a>
+                </li>
             </ul>
         </nav>
      </div>
