--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -54,9 +54,9 @@
                     {% elseif product.quantity == 0 %}
                         <p class="unavailable">Fora de estoque</p>
                     {% else %}
-                        <form action="/users/order" method="POST">
-                            <input type="hidden" name='id' value="{{product.id}}">
-                            <button class="button">COMPRAR</button>
+                        <form action="/cart/{{product.id}}/add-one" method="POST">
+                            {# <input type="hidden" name='id' value="{{product.id}}"> #}
+                            <button class="button">Adicionar ao Carrinho</button>
                         </form>
                     {% endif %}
                 </div>{# <--buy--> #}
