--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -9,7 +9,7 @@
         <div class="items">
             {% for product in products %}
                 <div class="product">
-                    <div class="image" style="background-image: url('{% if product.img %}{{product.img}}{% else %}https://via.placeholder.com/500x360.png?text=Produto+sem+foto{% endif %}')">
+                    <div class="image" style="background-image: url({% if product.img %}{{product.img}}{% else %}https://via.placeholder.com/500x360.png?text=Produto+sem+foto{% endif %})">
                     </div>
                         {% if product.old_price != product.price %}
                             <div class="old-price">
