--- a/src/app/views/orders/success.njk
+++ b/src/app/views/orders/success.njk
@@ -6,7 +6,7 @@
     <div class="success-lottie"></div>
     <h2>Pedido Realizado com Sucesso</h2>
     <p>Aguarde a resposta do vendedor no seu email cadastrado</p>
-    <a href="/producsts/search">Comprar mais</a>
+    <a href="/products/search">Comprar mais</a>
    
 {%endcall%}
 <script src="/assets/lottie.min.js" type="text/javascript"></script>
