--- a/public/styles/dropdown.css
+++ b/public/styles/dropdown.css
@@ -37,13 +37,15 @@ ul.dropdown li button{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
+    
     width: 100%;
     height: 48px;
 
     padding: 0 16px;
     border-radius: 4px;
     background-color: white;
+
+    cursor: pointer;
 }
 
 ul.dropdown li:hover a,
